--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -25,13 +25,8 @@ jobs:
       - name: Install dependencies for the twilio function
         env:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
-         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_STG }}
-         TWILIO_API_SECRET: ${{secrets.TWILIO_API_SECRET_STG}}
+         TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN_STG }}         
         run: npm -i -g serverless
-      - name: Install Serverless plugin for the twilio function
-        env:
-         TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
-         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_STG }}
-         TWILIO_API_SECRET: ${{secrets.TWILIO_API_SECRET_STG}}
+      - name: Install Serverless plugin for the twilio function        
         run: twilio plugin:install @twilio-labs/plugin-serverless
       
