--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -25,13 +25,6 @@ jobs:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}  
-        run: npm Install twilio-cli -g
-      - name: Install dependencies for the twilio function
-        env:
-         TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
-         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
-         TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}         
-        run: npm -i -g serverless
-      - name: Install Serverless plugin for the twilio function        
-        run: twilio plugin:install @twilio-labs/plugin-serverless
+        run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && cd  ./${{ github.event.inputs.name }} && twilio autopilot:deploy
+
       
