--- a/.github/workflows/publish_STG.yml
+++ b/.github/workflows/publish_STG.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install twilio cli and run deploy command
         env:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
-         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_STG }}
-         TWILIO_API_SECRET: ${{secrets.TWILIO_API_SECRET_STG}}
-        run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && cd  ./${{ github.event.inputs.name }} && twilio autopilot:deploy
+         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
+         TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}
+        run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && cd  ./ && twilio autopilot:deploy
