--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -25,6 +25,6 @@ jobs:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}  
-        run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && cd  ./${{ github.event.inputs.name }} && twilio autopilot:deploy
+        run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot
 
       
