--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -26,6 +26,6 @@ jobs:
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}  
         run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && twilio plugins:install @twilio-labs/plugin-serverless
-      - name: ls command
-        run: ls
+      - name: look up directory with LS command
+        run: ls -a
       
