--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -27,5 +27,5 @@ jobs:
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }}  
         run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && twilio plugins:install @twilio-labs/plugin-serverless
       - name: look up directory with LS command
-        run: ls -a
+        run: ls -al
       
