--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -28,4 +28,6 @@ jobs:
         run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && twilio plugins:install @twilio-labs/plugin-serverless
       - name: look up directory with LS command
         run: ls -al
+      - name: Deploy functions services
+        run: twilio serverless:deploy
       
