--- a/.github/workflows/publish_STG_FN.yml
+++ b/.github/workflows/publish_STG_FN.yml
@@ -29,5 +29,9 @@ jobs:
       - name: look up directory with LS command
         run: ls -al
       - name: Deploy functions services
+        env:
+         TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
+         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
+         TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_STG }} 
         run: twilio serverless:deploy
       
