--- a/.github/workflows/publish_STG_BOT.yml
+++ b/.github/workflows/publish_STG_BOT.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install twilio-cli -g && twilio plugins:install @dabblelab/plugin-autopilot && twilio plugins:install @twilio-labs/plugin-serverless
       - name: look up directory with LS command
         run: ls -al
-      - name: Deploy functions services
+      - name: Deploy Autopilot BOT
         env:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_STG }}
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_STG }}
