--- a/.github/workflows/publish_PROD_FN.yml
+++ b/.github/workflows/publish_PROD_FN.yml
@@ -8,7 +8,7 @@ on:
       name:
         description: 'Bot Unique Name'
         required: true
-        default: 'payment-type'
+        default: 'Payment-Type'
 
 jobs:
   build:
@@ -33,5 +33,5 @@ jobs:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_PROD }}
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_PROD }}
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_PROD }} 
-        run: twilio serverless:deploy
+        run: twilio serverless:deploy  --override-existing-project
       
