--- a/.github/workflows/publish_STG_BOT.yml
+++ b/.github/workflows/publish_STG_BOT.yml
@@ -8,7 +8,7 @@ on:
       name:
         description: 'Bot Unique Name'
         required: true
-        default: 'payment-type'
+        default: 'Payment-Type'
 
 jobs:
   build:
